styles.css
* {
  position: relative;
  margin: 0;
}

html {
  -webkit-backface-visibility: hidden;
  transition: filter 0s linear 0.5s;
}

html.inverse {
  filter: invert(1);
  transition: filter 0s linear 0.5s;
}

body {
  margin: 0;
  font-family: 'Ubuntu', sans-serif;
  font-size: 3vw;
  text-align: center;
  color:white;
}

.parent-filler {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

a {
  padding: 1vw 0;
  /* color: rgb(0, 144, 208); */
  color: white;
  text-decoration: underline;
}

a:visited {
  /* color: plum; */
  /* color: rgb(0, 144, 208); */
  color: white
}

a:hover {
  color: rgb(0, 144, 208);
}

a:active {
  color: hotpink;
}

.hex-back {
  background-color: #333;
  background-image: 
    linear-gradient(
      30deg,
      #222 12%,
      transparent 12.5%,
      transparent 87%,
      #222 87.5%,#222
    ),
    linear-gradient(
      150deg,
      #222 12%,
      transparent 12.5%,
      transparent 87%,
      #222 87.5%,#222
    ),
    linear-gradient(
      30deg,
      #222 12%,
      transparent 12.5%,
      transparent 87%,
      #222 87.5%,
      #222
    ),
    linear-gradient(
      150deg,
      #222 12%,
      transparent 12.5%,
      transparent 87%,
      #222 87.5%,
      #222
    ),
    linear-gradient(
      60deg,
      #000 25%,
      transparent 25.5%,
      transparent 75%,
      #000 0,
      #000
    ),
    linear-gradient(
      60deg,
      #000 25%,
      transparent 25.5%,
      transparent 75%,
      #000 0,
      #000
    );
  background-size: 80px 140px;
  background-position: 0 0,0 0,40px 70px,40px 70px,0 0,40px 70px;
}

.outer {
  position: absolute;
  padding: 2vw;
  width: 100%;
  min-height: 85vh;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.main {
  /* padding: 0 2vw 1vw; */
}

.primary-box {
  border: 3vw solid white;
  background: rgba(0, 0, 0, 0.5);
  padding: 1vw 2vw;
}

address {
  display: table;
  margin: 0 auto;
}

@keyframes popIn {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}

.welcome {
  /* animation: 2s linear 0s 1 slideUp; */
  left: 16vw;
  top: 0.5vw;
}

@keyframes slideUp {
  0% {
    top: 4vw;
  }
  50% {
    top: 4vw;
  }
  100% {
    top: 0.5vw;
  }
}

.avatar {
  animation: 1s ease-out 0s 1 popIn;
  border-radius: 100%;
  border: 1vw solid white;
  width: 20vw;
  transition: transform 1s linear;
  margin-bottom: 1vw;
}

.avatar.over {
  position: absolute;
  display: inline-block;
  left: 0;
  right: 0;
  margin: 0 auto;
  background: transparent;
  opacity: 0;
  -webkit-mask-image: -webkit-radial-gradient(50% 50%, circle, transparent 0%, black 100%);
  mask: radial-gradient(50% 50%, circle, transparent 0%, black 100%);
  transition: all 1s linear;
}

.avatar.over.blink {
  animation: 4s linear 0s infinite pulseOpacity;
}

.inverse .avatar {
  transform: scale(-1, 1);
  transition: transform 1s linear;
}

#avatar-button {
  cursor: pointer;
}

.avatar.over.hover {
  -webkit-mask-image: -webkit-radial-gradient(50% 40%, circle, transparent 0%, black 60%);
  mask: radial-gradient(50% 50%, circle, transparent 0%,  black 60%);
  border-color: white;
  transition: all 1s linear;
}

.avatar.over.hover:hover {
  border-color: #0090D0;
  opacity: 1;
  /* transition: all 1s linear; */
}

.inverse .avatar.over.hover {
  border-color: #0090D0;
  opacity: 1;
}

.over.hover + .parent-filler {
  background: transparent;
  background-image: radial-gradient(rgb(0, 144, 208, 1), rgba(0,0,0,0));
  opacity: 0;
  transition: all 1s;
  z-index: -1;
}

.over.hover:hover + .parent-filler {
  opacity: 1;
}

.inverse .over.hover + .parent-filler {
  opacity: 1;
  /* transition: all 1s; */
}

.row {
  display: flex;
}

.column {
  flex: 50%;
}

.school {
  text-align: left;
}

ul {
  padding-left: 5vw
}

li {
  margin-bottom: 1vw
}

li::marker {
  left: 0;
}

.job {
  margin-bottom: 2vw;
}

.tal {
  text-align: left;
}

.tar {
  text-align: right;
}

.tac {
  text-align:center;
}

.tb-img {
  position: absolute;
  right: 0;
  top: 0;
  width: 12vw;
}

.gwc-img {
  position: absolute;
  right: 0;
  top: 0;
  width: 25vw;
}

/* .border-gradient-purple {
  border-image-slice: 1;
  border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
} */

@keyframes pulseOpacity {
  0% {
    opacity: 0;
  }
  10% {
    opacity: 0;
  }
  20% {
    opacity: 0.5;
  }
  30% {
    opacity: 0;
  }
  40% {
    opacity: 0.5;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

@media (max-width: 767px) {
  body .main {
    font-size: 4vw;
  }
  .primary-box {
    border: 4vw solid white;
  }

  address {
    padding: 1vw;
  }

  .welcome {
    left: 20vw;
    top: 0;
  }

  .avatar {
    width: 60vw;
  }

  @keyframes slideUp {
    0% {
      top: 5vw;
    }
    50% {
      top: 5vw;
    }
    100% {
      top: 0vw;
    }
  }
}

